--- a/css/portf_style.css
+++ b/css/portf_style.css
@@ -17,6 +17,7 @@ header {
 	border:0px;
 	float:right;
 }
+
 header h1 {
 	background-color:#66CC99;
 	font-family:Arial, Verdana, sans-serif;
@@ -26,6 +27,7 @@ header h1 {
 	padding:10px;
 	padding-bottom:17px;
 }
+
 header nav {
 	width:650px;
 	margin-top:-20px;
@@ -33,6 +35,7 @@ header nav {
 	font-family:Arial, Verdana, sans-serif;
 	font-size:26px;
 }
+
 header nav ul {
 	width:550px;
 	margin-top:5px;
@@ -41,6 +44,7 @@ header nav ul {
 	float:right;
 	list-style-type:square;
 }
+
 header nav ul li {
 	float:left;
 	padding:1px 2px;
@@ -114,7 +118,7 @@ footer table {
 
 #b_bgDisplay {
 	width:100%;
-	margin-bottom:195px; /* footer height+15 */
+	margin-bottom:200px; /* footer height+20 */
 	padding-top:20px;
 	padding-bottom:20px;
 	float:left;
@@ -141,10 +145,10 @@ footer table {
 #f_slideButton {
 	background-color:#000;
 	position: absolute;
-	top: -55px;
+	top: -23px;
 	right:50%;
-	width:50px;
-	height:50px;
+	width:100px;
+	height:20px;
 	border: none;
 	cursor: pointer;
 }
@@ -167,7 +171,6 @@ footer table {
 	padding:20px;
 	background-color:#3399CC;
 	position:absolute;
-	align:left;
 	float:left;
 }
 
@@ -182,7 +185,7 @@ footer table {
 #hpg_body_border {
 	width:900px;
 	margin:auto;
-	margin-left:50px;
+	margin-left:70px;
 	margin-top:185px;
 	padding:20px;
 	background-color:#3399CC;
@@ -194,4 +197,15 @@ footer table {
 	margin:auto;
 	padding:20px;
 	background-color:#FFF;
+}
+
+#hpg_body_content h4 {
+	margin:2px;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:32px;
+	text-decoration:underline;
+}
+
+#hpg_body_content p {
+	font-size:16px;
 }
