--- a/css/portf_style.css
+++ b/css/portf_style.css
@@ -118,6 +118,7 @@ footer table {
 
 #b_bgDisplay {
 	width:100%;
+	min-width:1040px;
 	margin-bottom:200px; /* footer height+20 */
 	padding-top:20px;
 	padding-bottom:20px;
@@ -143,7 +144,7 @@ footer table {
 }
 
 #f_slideButton {
-	background-color:#000;
+	background-color:#0099FF;
 	position: absolute;
 	top: -23px;
 	right:50%;
@@ -182,11 +183,23 @@ footer table {
 	background-color:#FFF;
 }
 
+#hpg_header {
+	margin-top:50px;
+	margin-bottom:50px;
+	margin-right:60px;
+	font-family:Arial, Verdana, sans-serif;
+	font-size:48px;
+	font-style:italic;
+	font-weight:600;
+	text-decoration:underline;
+	color:#C60;
+	float:right;
+}
+
 #hpg_body_border {
 	width:900px;
 	margin:auto;
 	margin-left:70px;
-	margin-top:185px;
 	padding:20px;
 	background-color:#3399CC;
 	float:right;
@@ -201,11 +214,12 @@ footer table {
 
 #hpg_body_content h4 {
 	margin:2px;
-	font-family:Arial, Helvetica, sans-serif;
+	font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	font-size:32px;
 	text-decoration:underline;
 }
 
 #hpg_body_content p {
 	font-size:16px;
+	font-family:Arial, Helvetica, sans-serif;
 }
