--- a/css/portf_style.css
+++ b/css/portf_style.css
@@ -1,6 +1,14 @@
 /* CSS Document */
 @charset "utf-8";
 
+/* Declaring font type */
+@font-face {
+    font-family: 'Arial-local';
+    src: url('fonts/arial.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* Body */
 body {
 	/* No border, objects go to edge */
@@ -134,6 +142,7 @@ footer table {
 }
 
 #f_container {
+	height:180px;
 	position:absolute;
 	bottom:0px;
 	left:0px;
@@ -165,24 +174,52 @@ footer table {
 /* Content Custom ID's */
 /**/
 
-/* homepage.html */
-#hpg_profile_pic_border {
-	width:280px;
-	height:400px;
+#pic_border {
 	padding:20px;
 	background-color:#3399CC;
 	position:absolute;
-	float:left;
 }
 
-#hpg_profile_pic_container {
-	width:240px;
-	height:360px;
+#pic_container {
 	padding:20px;
-	margin:auto;
 	background-color:#FFF;
 }
 
+#default_pic {
+	/* Default width and height for pictures */
+	width:180px;
+	height:180px;
+}
+
+#text_border {
+	width:900px;
+	padding:20px;
+	background-color:#3399CC;
+}
+
+#text_content {
+	padding:20px;
+	background-color:#FFF;
+}
+
+#text_content h4 {
+	margin:2px;
+	font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	font-size:32px;
+	text-decoration:underline;
+}
+
+#text_content p {
+	font-size:16px;
+	font-family:"Arial-local", Arial, Helvetica, sans-serif;
+}
+
+#text_content ul {
+	margin-top:0px;
+	margin-bottom:0px;
+}
+
+/* homepage.html */
 #hpg_header {
 	margin-top:50px;
 	margin-bottom:50px;
@@ -196,30 +233,15 @@ footer table {
 	float:right;
 }
 
-#hpg_body_border {
-	width:900px;
-	margin:auto;
-	margin-left:70px;
-	padding:20px;
-	background-color:#3399CC;
-	float:right;
-}
-
-#hpg_body_content {
-	width:860px;
-	margin:auto;
-	padding:20px;
-	background-color:#FFF;
-}
-
-#hpg_body_content h4 {
-	margin:2px;
-	font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
-	font-size:32px;
+/* jobs.html */
+#jbs_header {
+	margin-left:auto;
+	margin-right:auto;
+	font-family:Arial, Verdana, sans-serif;
+	font-size:48px;
+	font-style:italic;
+	font-weight:600;
 	text-decoration:underline;
-}
-
-#hpg_body_content p {
-	font-size:16px;
-	font-family:Arial, Helvetica, sans-serif;
+	text-align:center;
+	color:#C60;
 }
