--- a/css/portf_style.css
+++ b/css/portf_style.css
@@ -155,7 +155,7 @@ footer table {
 #f_slideButton {
 	background-color:#0099FF;
 	position: absolute;
-	top: -23px;
+	bottom:185px;
 	right:50%;
 	width:100px;
 	height:20px;
@@ -187,8 +187,8 @@ footer table {
 
 #default_pic {
 	/* Default width and height for pictures */
-	width:180px;
-	height:180px;
+	width:240px;
+	height:240px;
 }
 
 #text_border {
