--- a/css/portf_style.css
+++ b/css/portf_style.css
@@ -27,7 +27,7 @@ header {
 }
 
 header h1 {
-	background-color:#66CC99;
+	background-color:#00CC99;
 	font-family:Arial, Verdana, sans-serif;
 	font-size:36px;
 	color:#C60;
@@ -83,6 +83,20 @@ footer table {
 	position:relative;
 }
 
+/* Links */
+a:link {
+	color:#0000FF;
+}
+a:visited {
+	color:#0000FF;
+}
+a:hover {
+	color:#6600CC
+}
+a:active {
+	color:#C60;
+}
+
 /**/
 /* Custom ID's */
 /**/
@@ -93,10 +107,10 @@ footer table {
 	top:0px;
 	position:absolute;
 	background: url(../images/Background%20Image.jpg) no-repeat center center fixed;
-	-webkit-background-size: inherit;
-	-moz-background-size: inherit;
-	-o-background-size: inherit;
-	background-size: inherit;
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	-o-background-size:cover;
+	background-size:1920px 1080px;
 }
 
 #b_no_footer {
@@ -148,12 +162,13 @@ footer table {
 	left:0px;
 	right:0px;
 	border:ridge;
-	background-color:#66CC99;
+	background-color:#00CC99;
 	clear:both;
 }
 
 #f_slideButton {
-	background-color:#0099FF;
+	background-image:url(../images/slideButtonDown.png);
+	background-size:100px 20px;
 	position: absolute;
 	bottom:185px;
 	right:48%;
@@ -211,12 +226,12 @@ footer table {
 	text-decoration:underline;
 }
 
-#text_content p {
+#text_content p, #text_content div p {
 	font-size:16px;
 	font-family:"Arial-local", Arial, Helvetica, sans-serif;
 }
 
-#text_content ul {
+#text_content ul, #text_content div ul, #text_content div ol {
 	margin-top:0px;
 	margin-bottom:0px;
 }
@@ -322,4 +337,17 @@ footer table {
 	width:220px;
 	height:150px;
 	float:right;
+}
+
+/* Projects */
+#proj_header {
+	margin-left:auto;
+	margin-right:auto;
+	font-family:Arial, Verdana, sans-serif;
+	font-size:48px;
+	font-style:italic;
+	font-weight:600;
+	text-decoration:underline;
+	text-align:center;
+	color:#C60;
 }
