--- a/css/sidebar_style.css
+++ b/css/sidebar_style.css
@@ -2,31 +2,50 @@
 @charset "utf-8";
 
 body {
-	margin:0px;
-	padding:0px;
+	margin-top:0px;
+	margin-bottom:0px;
+	margin-left:0px;
+	margin-right:0px;
+	padding-top:0px;
+	padding-bottom:0px;
+	padding-left:0px;
+	padding-right:0px;
 	background-color:#FFF;
 }
 
 h2 {
-	background-color:#00CC99;
-	padding:8px;
-	margin:0px;
-	border:ridge;
-	font-family:Arial, Verdana, sans-serif;
+	margin-top:0px;
+	margin-bottom:0px;
+	margin-left:0px;
+	margin-right:0px;
+	border-top:ridge;
+	border-bottom:ridge;
+	border-right:none;
+	border-left:none;
+	border-color:#9E9E9E;
+	padding-top:8px;
+	padding-bottom:8px;
+	padding-left:8px;
+	padding-right:8px;
+	background-color:#006600;
+	text-align:center;
+	font-family:'Arial-local', Arial, Verdana, sans-serif;
 	font-size:20px;
 	color:#C60;
-	text-align:center;
 }
 
 h4 {
-	background-color:#3399CC;
-	padding:5px;
 	margin-top:10px;
 	margin-bottom:10px;
-	font-family:Arial, Verdana, sans-serif;
-	font-size:18px;
-	color:#C60;
+	padding-top:5px;
+	padding-bottom:5px;
+	padding-left:5px;
+	padding-right:5px;
+	background-color:#3399CC;
 	text-align:center;
+	font-family:'Arial-local', Arial, Verdana, sans-serif;
+	font-size:18px;
+	color:#CC6600;
 }
 
 img {
@@ -38,4 +57,8 @@ img {
 	width:200px;
 	margin-left:auto;
 	margin-right:auto;
+}
+
+a {
+	text-decoration:none;
 }
