--- a/css/sidebar_style.css
+++ b/css/sidebar_style.css
@@ -31,7 +31,7 @@ h2 {
 	text-align:center;
 	font-family:'Arial-local', Arial, Verdana, sans-serif;
 	font-size:20px;
-	color:#C60;
+	color:#CC6600;
 }
 
 h4 {
@@ -45,7 +45,6 @@ h4 {
 	text-align:center;
 	font-family:'Arial-local', Arial, Verdana, sans-serif;
 	font-size:18px;
-	color:#CC6600;
 }
 
 img {
@@ -59,6 +58,20 @@ img {
 	margin-right:auto;
 }
 
+/* Links */
 a {
 	text-decoration:none;
+}
+a:link {
+	text-decoration:none;
+	color:#0000FF;
+}
+a:visited {
+	color:#0000FF;
+}
+a:hover {
+	color:#6600CC
+}
+a:active {
+	color:#CC6600;
 }
